hard-gists/4110897/run.log
=== Docker Run Log for 4110897 ===
Started at: Mi 29. Okt 14:21:42 CET 2025

[2025-10-29 14:21:42] START: Running container for 4110897
[2025-10-29 14:21:43] SUCCESS: Container 59f4b101fb2cfb9450b48e48fdbe918be1504c6fe23a27def0d2e118197a88c3 started for 4110897
=== Container logs for 4110897 ===
  File "/snippet.py", line 98
    print 'BAD signature'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4110897 ===
[2025-10-29 14:21:45] INFO: Container 59f4b101fb2cfb9450b48e48fdbe918be1504c6fe23a27def0d2e118197a88c3 has stopped
